마지막 저장

--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -1,2 +1,3 @@
 /itemList.do=item.command.ItemListHandler
 /companyList.do=company.command.CompanyListHandler
+/storageList.do=storage.command.StorageListHandler
