--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -1,2 +1,3 @@
 /itemList.do=item.command.ItemListHandler
+/itemSearch.do=item.command.ItemSearchHandler
 /companyList.do=company.command.CompanyListHandler
