--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -1,3 +1,30 @@
+/join.do=member.command.JoinHandler
+/change.do=member.command.ChangeHandler
+/login.do=auth.command.LoginHandler
+/boxMoveList.do=boxmove.command.BoxMoveHandler
+/boxMoveRegister.do=boxmove.command.BoxMoveRegisterHandler
+/boxMoveSearch.do=boxmove.command.BoxMoveSearchHandler
+/buyList.do=buy.command.BuyHandler
+/buyRegister.do=buy.command.BuyRegisterHandler
+/buySearch.do=buy.command.BuySearchHandler
+/companyList.do=company.command.CompanyHandler
+/companyRegister.do=company.command.CompanyRegisterHandler
+/companySearch.do=company.command.CompanySearchHandler
 /itemList.do=item.command.ItemListHandler
 /itemSearch.do=item.command.ItemSearchHandler
-/companyList.do=company.command.CompanyListHandler
+/orderList.do=order.command.OrderHandler
+/orderRegister.do=order.command.OrderRegisterHandler
+/orderSearch.do=order.command.OrderSearchHandler
+/planList.do=plan.command.PlanHandler
+/planRegister.do=plan.command.PlanRegisterHandler
+/planSearch.do=plan.command.PlanSearchHandler
+/recallList.do=recall.command.RecallHandler
+/recallRegister.do=recall.command.RecallRegisterHandler
+/recallSearch.do=recall.command.RecallSearchHandler
+/sheetList.do=sheet.command.SheetHandler
+/sheetSearch.do=sheet.command.SheetSearchHandler
+/stockList.do=stock.command.StockHandler
+/stockSearch.do=stock.command.StockSearchHandler
+/storageList.do=storage.command.StorageHandler
+/storageRegister.do=storage.command.StorageRegisterHandler
+/storageSearch.do=storage.command.StorageSearchHandler
