--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -12,7 +12,7 @@
 /companySearch.do=company.command.CompanySearchHandler
 /itemList.do=item.command.ItemListHandler
 /itemSearch.do=item.command.ItemSearchHandler
-/orderList.do=order.command.OrderHandler
+/orderList.do=order.command.OrderListHandler
 /orderRegister.do=order.command.OrderRegisterHandler
 /orderSearch.do=order.command.OrderSearchHandler
 /planList.do=plan.command.PlanHandler
