--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -1,13 +1,13 @@
 /join.do=member.command.JoinHandler
 /change.do=member.command.ChangeHandler
 /login.do=auth.command.LoginHandler
-/boxMoveList.do=boxmove.command.BoxMoveHandler
+/boxMoveList.do=boxmove.command.BoxMoveListHandler
 /boxMoveRegister.do=boxmove.command.BoxMoveRegisterHandler
 /boxMoveSearch.do=boxmove.command.BoxMoveSearchHandler
-/buyList.do=buy.command.BuyHandler
+/buyList.do=buy.command.BuyListHandler
 /buyRegister.do=buy.command.BuyRegisterHandler
 /buySearch.do=buy.command.BuySearchHandler
-/companyList.do=company.command.CompanyHandler
+/companyList.do=company.command.CompanyListHandler
 /companyRegister.do=company.command.CompanyRegisterHandler
 /companySearch.do=company.command.CompanySearchHandler
 /itemList.do=item.command.ItemListHandler
@@ -15,16 +15,16 @@
 /orderList.do=order.command.OrderListHandler
 /orderRegister.do=order.command.OrderRegisterHandler
 /orderSearch.do=order.command.OrderSearchHandler
-/planList.do=plan.command.PlanHandler
+/planList.do=plan.command.PlanListHandler
 /planRegister.do=plan.command.PlanRegisterHandler
 /planSearch.do=plan.command.PlanSearchHandler
-/recallList.do=recall.command.RecallHandler
+/recallList.do=recall.command.RecallListHandler
 /recallRegister.do=recall.command.RecallRegisterHandler
 /recallSearch.do=recall.command.RecallSearchHandler
-/sheetList.do=sheet.command.SheetHandler
+/sheetList.do=sheet.command.SheetListHandler
 /sheetSearch.do=sheet.command.SheetSearchHandler
-/stockList.do=stock.command.StockHandler
+/stockList.do=stock.command.StockListHandler
 /stockSearch.do=stock.command.StockSearchHandler
-/storageList.do=storage.command.StorageHandler
+/storageList.do=storage.command.StorageListHandler
 /storageRegister.do=storage.command.StorageRegisterHandler
 /storageSearch.do=storage.command.StorageSearchHandler
