--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -1,3 +1,30 @@
-/itemList.do=item.command.ItemListHandler
-/companyList.do=company.command.CompanyListHandler
-/companyRegister.do=company.command.CompanyRegisterHandler
+/login.do=auth.command.LoginHandler
+/join.do=member.command.JoinHandler
+/change.do=member.command.ChangeHandler
+#/boxMoveList.do=boxmove.command.BoxMoveListHandler
+#/boxMoveRegister.do=boxmove.command.BoxMoveRegisterHandler
+#/boxMoveSearch.do=boxmove.command.BoxMoveSearchHandler
+#/buyList.do=buy.command.BuyListHandler
+#/buyRegister.do=buy.command.BuyRegisterHandler
+#/buySearch.do=buy.command.BuySearchHandler
+#/companyList.do=company.command.CompanyListHandler
+#/companyRegister.do=company.command.CompanyRegisterHandler
+#/companySearch.do=company.command.CompanySearchHandler
+#/itemList.do=item.command.ItemListHandler
+#/itemSearch.do=item.command.ItemSearchHandler
+#/orderList.do=order.command.OrderListHandler
+#/orderRegister.do=order.command.OrderRegisterHandler
+#/orderSearch.do=order.command.OrderSearchHandler
+#/planList.do=plan.command.PlanListHandler
+#/planRegister.do=plan.command.PlanRegisterHandler
+#/planSearch.do=plan.command.PlanSearchHandler
+#/recallList.do=recall.command.RecallListHandler
+#/recallRegister.do=recall.command.RecallRegisterHandler
+#/recallSearch.do=recall.command.RecallSearchHandler
+#/sheetList.do=sheet.command.SheetListHandler
+#/sheetSearch.do=sheet.command.SheetSearchHandler
+#/stockList.do=stock.command.StockListHandler
+#/stockSearch.do=stock.command.StockSearchHandler
+#/storageList.do=storage.command.StorageListHandler
+#/storageRegister.do=storage.command.StorageRegisterHandler
+#/storageSearch.do=storage.command.StorageSearchHandler
