--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -7,7 +7,7 @@
 #/buyList.do=buy.command.BuyListHandler
 #/buyRegister.do=buy.command.BuyRegisterHandler
 #/buySearch.do=buy.command.BuySearchHandler
-#/companyList.do=company.command.CompanyListHandler
+/companyList.do=company.command.CompanyListHandler
 #/companyRegister.do=company.command.CompanyRegisterHandler
 #/companySearch.do=company.command.CompanySearchHandler
 #/itemList.do=item.command.ItemListHandler
