--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -23,8 +23,8 @@
 #/recallSearch.do=recall.command.RecallSearchHandler
 #/sheetList.do=sheet.command.SheetListHandler
 #/sheetSearch.do=sheet.command.SheetSearchHandler
-#/stockList.do=stock.command.StockListHandler
-#/stockSearch.do=stock.command.StockSearchHandler
+/stockList.do=stock.command.StockListHandler
+/stockSearch.do=stock.command.StockSearchHandler
 #/storageList.do=storage.command.StorageListHandler
 #/storageRegister.do=storage.command.StorageRegisterHandler
 #/storageSearch.do=storage.command.StorageSearchHandler
