--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -10,8 +10,8 @@
 /companyList.do=company.command.CompanyListHandler
 #/companyRegister.do=company.command.CompanyRegisterHandler
 #/companySearch.do=company.command.CompanySearchHandler
-#/itemList.do=item.command.ItemListHandler
-#/itemSearch.do=item.command.ItemSearchHandler
+/itemList.do=item.command.ItemListHandler
+/itemSearch.do=item.command.ItemSearchHandler
 #/orderList.do=order.command.OrderListHandler
 #/orderRegister.do=order.command.OrderRegisterHandler
 #/orderSearch.do=order.command.OrderSearchHandler
