recall 프로포티스

--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -18,9 +18,9 @@
 #/planList.do=plan.command.PlanListHandler
 #/planRegister.do=plan.command.PlanRegisterHandler
 #/planSearch.do=plan.command.PlanSearchHandler
-#/recallList.do=recall.command.RecallListHandler
-#/recallRegister.do=recall.command.RecallRegisterHandler
-#/recallSearch.do=recall.command.RecallSearchHandler
+/recallList.do=recall.command.RecallListHandler
+/recallRegister.do=recall.command.RecallRegisterHandler
+/recallSearch.do=recall.command.RecallSearchHandler
 #/sheetList.do=sheet.command.SheetListHandler
 #/sheetSearch.do=sheet.command.SheetSearchHandler
 /stockList.do=stock.command.StockListHandler
