--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -4,11 +4,11 @@
 #/boxMoveList.do=boxmove.command.BoxMoveListHandler
 #/boxMoveRegister.do=boxmove.command.BoxMoveRegisterHandler
 #/boxMoveSearch.do=boxmove.command.BoxMoveSearchHandler
-#/buyList.do=buy.command.BuyListHandler
+/buyList.do=buy.command.BuyListHandler
 #/buyRegister.do=buy.command.BuyRegisterHandler
 #/buySearch.do=buy.command.BuySearchHandler
 /companyList.do=company.command.CompanyListHandler
-#/companyRegister.do=company.command.CompanyRegisterHandler
+/companyRegister.do=company.command.CompanyRegisterHandler
 #/companySearch.do=company.command.CompanySearchHandler
 /itemList.do=item.command.ItemListHandler
 /itemSearch.do=item.command.ItemSearchHandler
