--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -1,4 +1,5 @@
 /login.do=auth.command.LoginHandler
+/logout.do=auth.command.LogoutHandler
 /join.do=member.command.JoinHandler
 /change.do=member.command.ChangeHandler
 #/boxMoveList.do=boxmove.command.BoxMoveListHandler
@@ -25,6 +26,6 @@
 #/sheetSearch.do=sheet.command.SheetSearchHandler
 /stockList.do=stock.command.StockListHandler
 /stockSearch.do=stock.command.StockSearchHandler
-#/storageList.do=storage.command.StorageListHandler
-#/storageRegister.do=storage.command.StorageRegisterHandler
-#/storageSearch.do=storage.command.StorageSearchHandler
+/storageList.do=storage.command.StorageListHandler
+/storageRegister.do=storage.command.StorageRegisterHandler
+/storageSearch.do=storage.command.StorageSearchHandler
