--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -1,3 +1,13 @@
 /login.do=auth.command.LoginHandler
 /logout.do=auth.command.LogoutHandler
 /join.do=member.command.JoinHandler
+/change.do=member.command.ChangeHandler
+/buyList.do=buy.command.BuyListHandler
+/companyList.do=company.command.CompanyListHandler
+/itemList.do=item.command.ItemListHandler
+/orderList.do=order.command.OrderListHandler
+/planList.do=plan.command.PlanListHandler
+/sheetList.do=sheet.command.SheetListHandler
+/recallList.do=recall.command.RecallListHandler
+/stockList.do=stock.command.StockListHandler
+/storageList.do=storage.command.StorageListHandler
