--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -5,9 +5,13 @@
 /buyList.do=buy.command.BuyListHandler
 /companyList.do=company.command.CompanyListHandler
 /itemList.do=item.command.ItemListHandler
+/itemSearch.do=item.command.ItemSearchHandler
 /orderList.do=order.command.OrderListHandler
 /planList.do=plan.command.PlanListHandler
 /sheetList.do=sheet.command.SheetListHandler
 /recallList.do=recall.command.RecallListHandler
+/recallSearch.do=recall.command.RecallSearchHandler
+/recallRegister.do=recall.command.RecallRegisterHandler
 /stockList.do=stock.command.StockListHandler
+/stockSearch.do=stock.command.StockSearchHandler
 /storageList.do=storage.command.StorageListHandler
