창고등록 프로포티

--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -14,3 +14,4 @@
 /stockList.do=stock.command.StockListHandler
 /stockSearch.do=stock.command.StockSearchHandler
 /storageList.do=storage.command.StorageListHandler
+/storageRegister.do=storage.command.StorageRegisterHandler
