--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -3,7 +3,9 @@
 /join.do=member.command.JoinHandler
 /change.do=member.command.ChangeHandler
 /buyList.do=buy.command.BuyListHandler
+/buySearch.do=buy.command.BuySearchHandler
 /companyList.do=company.command.CompanyListHandler
+/companySearch.do=company.command.CompanySearchHandler
 /itemList.do=item.command.ItemListHandler
 /itemSearch.do=item.command.ItemSearchHandler
 /orderList.do=order.command.OrderListHandler
