--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -9,6 +9,7 @@
 /itemList.do=item.command.ItemListHandler
 /itemSearch.do=item.command.ItemSearchHandler
 /orderList.do=order.command.OrderListHandler
+/orderRegister.do=order.command.OrderRegisterHandler
 /planList.do=plan.command.PlanListHandler
 /sheetList.do=sheet.command.SheetListHandler
 /recallList.do=recall.command.RecallListHandler
