--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -11,6 +11,7 @@
 /orderList.do=order.command.OrderListHandler
 /orderRegister.do=order.command.OrderRegisterHandler
 /planList.do=plan.command.PlanListHandler
+/planRegister.do=plan.command.PlanRegisterHandler
 /sheetList.do=sheet.command.SheetListHandler
 /recallList.do=recall.command.RecallListHandler
 /recallSearch.do=recall.command.RecallSearchHandler
