--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -11,6 +11,7 @@
 /sheetList.do=sheet.command.SheetListHandler
 /recallList.do=recall.command.RecallListHandler
 /recallSearch.do=recall.command.RecallSearchHandler
+/recallRegister.do=recall.command.RecallRegisterHandler
 /stockList.do=stock.command.StockListHandler
 /stockSearch.do=stock.command.StockSearchHandler
 /storageList.do=storage.command.StorageListHandler
