--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -13,8 +13,9 @@
 /planList.do=plan.command.PlanListHandler
 /planRegister.do=plan.command.PlanRegisterHandler
 /sheetList.do=sheet.command.SheetListHandler
-/recallList.do=recall.command.RecallListHandler
-/recallSearch.do=recall.command.RecallSearchHandler
+#/recallList.do=recall.command.RecallListHandler
+#/recallSearch.do=recall.command.RecallSearchHandler
+#/recallRegister.do=recall.command.RecallRegisterHandler
 /stockList.do=stock.command.StockListHandler
 /stockSearch.do=stock.command.StockSearchHandler
 /storageList.do=storage.command.StorageListHandler
