--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -10,6 +10,8 @@
 /itemSearch.do=item.command.ItemSearchHandler
 /orderList.do=order.command.OrderListHandler
 /orderRegister.do=order.command.OrderRegisterHandler
+/orderSearch.do=order.command.OrderSearchHandler
+/orderCheck.do=order.command.OrderCheckHandler
 /planList.do=plan.command.PlanListHandler
 /planRegister.do=plan.command.PlanRegisterHandler
 /sheetList.do=sheet.command.SheetListHandler
