--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -14,6 +14,8 @@
 /orderCheck.do=order.command.OrderCheckHandler
 /planList.do=plan.command.PlanListHandler
 /planRegister.do=plan.command.PlanRegisterHandler
+/planSearch.do=plan.command.PlanSearchHandler
+/planCheck.do=plan.command.PlanCheckHandler
 /sheetList.do=sheet.command.SheetListHandler
 /recallList.do=recall.command.RecallListHandler
 #/recallSearch.do=recall.command.RecallSearchHandler
