--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -17,6 +17,7 @@
 /planSearch.do=plan.command.PlanSearchHandler
 /planCheck.do=plan.command.PlanCheckHandler
 /sheetList.do=sheet.command.SheetListHandler
+/sheetSearch.do=sheet.command.SheetSearchHandler
 /recallList.do=recall.command.RecallListHandler
 #/recallSearch.do=recall.command.RecallSearchHandler
 /recallRegister.do=recall.command.RecallRegisterHandler
