--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -6,6 +6,7 @@
 /buySearch.do=buy.command.BuySearchHandler
 /companyList.do=company.command.CompanyListHandler
 /companySearch.do=company.command.CompanySearchHandler
+/companyRegister.do=company.command.CompanyRegisterHandler
 /itemList.do=item.command.ItemListHandler
 /itemSearch.do=item.command.ItemSearchHandler
 /orderList.do=order.command.OrderListHandler
